# cdk-workshop-ecs-fargate-python

./: .env.sample  .gitignore  .gitpod.yml  Dockerfile  README.md  app.py  cdk.context.json  cdk.json  completion.bash  pyproject.toml  requirements.txt
stacks/: common.py  network.py  webapp.py
tests/unit/: test_cdk_workshop_ecs_fargate_python_stack.py
